# recursive-animation-engine

./: .gitignore  LICENSE  README.md  SKILL.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  clawhub-publish.yml
docs/: AGENT_VIDEO_SKILL.md
reng/: __init__.py  __main__.py  watch.py
reng/lib/: __init__.py  build.py  engine.py  events.py  plan.py  providers.py  render.py  verify.py  vision.py
skills/hyperframes-render/: SKILL.md  hyperframes  hyperframes-render  visual_verify.py
skills/vision/: SKILL.md  vision_analyze.py
tests/: __init__.py  support_load_render.py  test_hyperframes_render_optional.py  test_hyperframes_smoke.py  test_render_resolve.py
